# eolib-rs

./: .gitmodules  Cargo.toml  build.rs
.github/workflows/: rust.yml
src/data/: eo_reader.rs  eo_serialize.rs  eo_writer.rs  mod.rs
src/encrypt/: decrypt_packet.rs  encrypt_packet.rs  generate_swap_multiple.rs  swap_multiples.rs
src/packet/: mod.rs  sequencer.rs
